# klangscribe

./: .gitignore  README.md
klangscribe-compute/: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  slurm_template.sh
klangscribe-compute/demucs-preprocessing/: run_demucs_partition.py  slurm.sh
klangscribe-compute/resources/: __init__.py  s3.py
klangscribe-compute/retrieve-data/: get_opus_data.py
klangscribe-compute/retrieve_data/: get_opus_data.py
klangscribe-compute/scripts/: README.md  compress_separated.py  get_canonical_dataset.py  get_opus_data.py  get_raw_chart_data.py  separate_audio.py
klangscribe-compute/utils/: __init__.py  format.py
klangscribe-orchestration/: .dockerignore  .gitignore  DEPLOY_STEPS.md  Dockerfile  Dockerfile.old  README.md  dagster.yaml  pyproject.toml  workspace.yaml
klangscribe-orchestration-local/: Makefile  README.md  pyproject.toml  workspace.yaml
klangscribe-orchestration-local/.dg/: telemetry.yaml
klangscribe-orchestration-local/docker/: docker-compose.yml
klangscribe-orchestration-local/src/klangscribe_orchestration_local/defs/: jobs.py  sensors.py
klangscribe-orchestration/.dg/: telemetry.yaml
klangscribe-orchestration/docker/: docker-compose.old.yml  docker-compose.yml
klangscribe-orchestration/docker/dagster/: Dockerfile_code  Dockerfile_dagster
klangscribe-orchestration/podman/: Dockerfile  run-dev.sh
klangscribe-orchestration/src/klangscribe_orchestration/defs/: jobs.py  resources.py  sensors.py
klangscribe-orchestration/src/klangscribe_orchestration/defs/assets/: collected.py  manifest_assets.py
klangscribe-orchestration/src/klangscribe_orchestration/defs/jobs/: collection.py  sanity.py
klangscribe-orchestration/src/klangscribe_orchestration/defs/resources/: __init__.py  directory_processing.py  postgres.py  s3.py
klangscribe-orchestration/src/klangscribe_orchestration/utils/: __init__.py  audio_processing.py  raw_processing.py
local-services/storage/: docker-compose.yml
local-services/storage/dagster-postgres/: init.sql
local-services/storage/klangscribe-postgres/: init.sql
