[project]
name = "klangscribe_orchestration_local"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "boto3>=1.42.39",
    "dagster==1.12.13",
    "dagster-postgres>=0.28.13",
    "dagster-webserver",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "klangscribe_orchestration_local"
registry_modules = [
    "klangscribe_orchestration_local.components.*",
]


